assignment3/app-1/app-1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep
  labels:
    app: nginx-main
spec:
  selector:
    matchLabels:
      app: nginx-main
  template:
    metadata:
      labels:
        app: nginx-main
    spec:
      containers:
      - name: nginx-main
        image: ghcr.io/denoslab/ensf400-sample-app:v1
        ports:
        - containerPort: 8888
